--- a/notebooks/01-pre_processar_arquivos.ipynb
+++ b/notebooks/01-pre_processar_arquivos.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,6 +78,8 @@
      "output_type": "stream",
      "text": [
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_00300401112022.csv.gz\n",
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_19300501112022.csv.gz\n",
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_18300501112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_06450801112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_11000601112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_01000401112022.csv.gz\n",
@@ -86,10 +88,14 @@
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_13450701112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_09450801112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_00450501112022.csv.gz\n",
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_15450401112022.csv.gz\n",
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_16000501112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_06150701112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_04450701112022.csv.gz\n",
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_18150501112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_23150631102022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_12000501112022.csv.gz\n",
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_17150501112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_05000801112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_03000601112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_10001101112022.csv.gz\n",
@@ -100,34 +106,47 @@
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_08301201112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_12300401112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_01150501112022.csv.gz\n",
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_14300601112022.csv.gz\n",
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_19000401112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_08152601112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_03300601112022.csv.gz\n",
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_14451101112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_01450601112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_08001401112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_14000601112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_22450731102022.csv.gz\n",
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_19150501112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_09001401112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_10301701112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_22150531102022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_05300801112022.csv.gz\n",
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_15150501112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_00000501112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_11150501112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_11450501112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_10150501112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_02150601112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_06300701112022.csv.gz\n",
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_17450601112022.csv.gz\n",
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_16300501112022.csv.gz\n",
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_16450501112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_07450701112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_13000501112022.csv.gz\n",
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_18450501112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_11300401112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_07000701112022.csv.gz\n",
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_16150501112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_05450701112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_00150701112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_09301901112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_21450431102022.csv.gz\n",
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_19450601112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_07151001112022.csv.gz\n",
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_17300601112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_07301101112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_13300401112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_02450801112022.csv.gz\n",
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_20000401112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_22300631102022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_02300801112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_01300501112022.csv.gz\n",
@@ -136,7 +155,14 @@
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_12450501112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_14150401112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_04000601112022.csv.gz\n",
-      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_02000501112022.csv.gz\n",
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_02000501112022.csv.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_15000501112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_06000801112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_23000631102022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_04150501112022.csv.gz\n",
@@ -144,8 +170,11 @@
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_22000431102022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_13150501112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_03150701112022.csv.gz\n",
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_18000601112022.csv.gz\n",
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_17000401112022.csv.gz\n",
       "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_03450601112022.csv.gz\n",
-      "Fim processsamento CPU\n"
+      "/home/56740050368/Treinamento/IA-PUC_Minas/Trabalho_Cientifico/dados/metrics/cpu/cpu_15300501112022.csv.gz\n",
+      "Fim processamento de CPU\n"
      ]
     }
    ],
@@ -194,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -203,14 +232,22 @@
      "text": [
       "memory_01000401112022.csv.gz\n",
       "1 0\n",
+      "memory_17450601112022.csv.gz\n",
+      "17 45\n",
       "memory_05300901112022.csv.gz\n",
       "5 30\n",
       "memory_21450431102022.csv.gz\n",
       "21 45\n",
       "memory_11150501112022.csv.gz\n",
       "11 15\n",
+      "memory_19450601112022.csv.gz\n",
+      "19 45\n",
       "memory_05150601112022.csv.gz\n",
       "5 15\n",
+      "memory_15000501112022.csv.gz\n",
+      "15 0\n",
+      "memory_15300501112022.csv.gz\n",
+      "15 30\n",
       "memory_10150501112022.csv.gz\n",
       "10 15\n",
       "memory_11450501112022.csv.gz\n",
@@ -221,16 +258,24 @@
       "14 15\n",
       "memory_22450731102022.csv.gz\n",
       "22 45\n",
+      "memory_18150501112022.csv.gz\n",
+      "18 15\n",
       "memory_09450901112022.csv.gz\n",
       "9 45\n",
       "memory_10001101112022.csv.gz\n",
       "10 0\n",
       "memory_04000601112022.csv.gz\n",
       "4 0\n",
+      "memory_18450801112022.csv.gz\n",
+      "18 45\n",
+      "memory_17150501112022.csv.gz\n",
+      "17 15\n",
       "memory_06000801112022.csv.gz\n",
       "6 0\n",
       "memory_08301201112022.csv.gz\n",
       "8 30\n",
+      "memory_16450501112022.csv.gz\n",
+      "16 45\n",
       "memory_00450501112022.csv.gz\n",
       "0 45\n",
       "memory_11000501112022.csv.gz\n",
@@ -241,18 +286,30 @@
       "1 30\n",
       "memory_03450601112022.csv.gz\n",
       "3 45\n",
+      "memory_17000401112022.csv.gz\n",
+      "17 0\n",
       "memory_04450701112022.csv.gz\n",
       "4 45\n",
+      "memory_16150501112022.csv.gz\n",
+      "16 15\n",
       "memory_23150631102022.csv.gz\n",
       "23 15\n",
       "memory_22300631102022.csv.gz\n",
       "22 30\n",
+      "memory_19300401112022.csv.gz\n",
+      "19 30\n",
       "memory_22000331102022.csv.gz\n",
       "22 0\n",
+      "memory_14300501112022.csv.gz\n",
+      "14 30\n",
       "memory_05450701112022.csv.gz\n",
       "5 45\n",
+      "memory_15150601112022.csv.gz\n",
+      "15 15\n",
       "memory_11300401112022.csv.gz\n",
       "11 30\n",
+      "memory_17300501112022.csv.gz\n",
+      "17 30\n",
       "memory_12450501112022.csv.gz\n",
       "12 45\n",
       "memory_06450801112022.csv.gz\n",
@@ -263,6 +320,8 @@
       "8 15\n",
       "memory_13450701112022.csv.gz\n",
       "13 45\n",
+      "memory_18300401112022.csv.gz\n",
+      "18 30\n",
       "memory_21300431102022.csv.gz\n",
       "21 30\n",
       "memory_09001301112022.csv.gz\n",
@@ -275,8 +334,14 @@
       "1 15\n",
       "memory_12300401112022.csv.gz\n",
       "12 30\n",
+      "memory_14450701112022.csv.gz\n",
+      "14 45\n",
+      "memory_16000501112022.csv.gz\n",
+      "16 0\n",
       "memory_23000631102022.csv.gz\n",
       "23 0\n",
+      "memory_15450401112022.csv.gz\n",
+      "15 45\n",
       "memory_07301001112022.csv.gz\n",
       "7 30\n",
       "memory_09302301112022.csv.gz\n",
@@ -289,12 +354,18 @@
       "2 45\n",
       "memory_13300401112022.csv.gz\n",
       "13 30\n",
+      "memory_16300501112022.csv.gz\n",
+      "16 30\n",
+      "memory_20000401112022.csv.gz\n",
+      "20 0\n",
       "memory_23450631102022.csv.gz\n",
       "23 45\n",
       "memory_03000501112022.csv.gz\n",
       "3 0\n",
       "memory_06300701112022.csv.gz\n",
       "6 30\n",
+      "memory_19150501112022.csv.gz\n",
+      "19 15\n",
       "memory_07450801112022.csv.gz\n",
       "7 45\n",
       "memory_22150531102022.csv.gz\n",
@@ -307,6 +378,8 @@
       "3 15\n",
       "memory_13000501112022.csv.gz\n",
       "13 0\n",
+      "memory_18000501112022.csv.gz\n",
+      "18 0\n",
       "memory_14000601112022.csv.gz\n",
       "14 0\n",
       "memory_07151101112022.csv.gz\n",
@@ -329,6 +402,8 @@
       "10 45\n",
       "memory_23300531102022.csv.gz\n",
       "23 30\n",
+      "memory_19000701112022.csv.gz\n",
+      "19 0\n",
       "memory_10301701112022.csv.gz\n",
       "10 30\n",
       "memory_02150601112022.csv.gz\n",
@@ -382,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -396,40 +471,55 @@
       "error_05150601112022.csv.gz\n",
       "error_10450501112022.csv.gz\n",
       "error_13300301112022.csv.gz\n",
+      "error_16000401112022.csv.gz\n",
       "error_09301701112022.csv.gz\n",
+      "error_17150401112022.csv.gz\n",
       "error_01150501112022.csv.gz\n",
       "error_07301001112022.csv.gz\n",
       "error_08301101112022.csv.gz\n",
       "error_14000501112022.csv.gz\n",
       "error_02000501112022.csv.gz\n",
+      "error_14300401112022.csv.gz\n",
       "error_04300601112022.csv.gz\n",
       "error_11300301112022.csv.gz\n",
       "error_12150401112022.csv.gz\n",
       "error_05300801112022.csv.gz\n",
       "error_12000401112022.csv.gz\n",
+      "error_14451101112022.csv.gz\n",
+      "error_18300401112022.csv.gz\n",
       "error_03150601112022.csv.gz\n",
+      "error_15000401112022.csv.gz\n",
       "error_06300601112022.csv.gz\n",
       "error_03450601112022.csv.gz\n",
       "error_21300331102022.csv.gz\n",
+      "error_15300401112022.csv.gz\n",
       "error_12300301112022.csv.gz\n",
       "error_01000401112022.csv.gz\n",
+      "error_17450501112022.csv.gz\n",
       "error_07150801112022.csv.gz\n",
       "error_10301501112022.csv.gz\n",
       "error_13000501112022.csv.gz\n",
       "error_12450501112022.csv.gz\n",
       "error_10150401112022.csv.gz\n",
+      "error_16150401112022.csv.gz\n",
       "error_14150301112022.csv.gz\n",
       "error_22000331102022.csv.gz\n",
       "error_23150531102022.csv.gz\n",
       "error_05450601112022.csv.gz\n",
+      "error_16300501112022.csv.gz\n",
       "error_13450601112022.csv.gz\n",
       "error_13150401112022.csv.gz\n",
       "error_04150401112022.csv.gz\n",
       "error_03000501112022.csv.gz\n",
       "error_21450431102022.csv.gz\n",
       "error_09450701112022.csv.gz\n",
+      "error_18150401112022.csv.gz\n",
+      "error_18000401112022.csv.gz\n",
+      "error_19150501112022.csv.gz\n",
+      "error_16450401112022.csv.gz\n",
       "error_11000401112022.csv.gz\n",
       "error_08451301112022.csv.gz\n",
+      "error_19000301112022.csv.gz\n",
       "error_23450531102022.csv.gz\n",
       "error_23000531102022.csv.gz\n",
       "error_00300401112022.csv.gz\n",
@@ -439,23 +529,31 @@
       "error_11450401112022.csv.gz\n",
       "error_02150601112022.csv.gz\n",
       "error_06150701112022.csv.gz\n",
+      "error_17300301112022.csv.gz\n",
       "error_09001101112022.csv.gz\n",
       "error_11150301112022.csv.gz\n",
+      "error_18450401112022.csv.gz\n",
       "error_00450401112022.csv.gz\n",
       "error_01300401112022.csv.gz\n",
       "error_07450601112022.csv.gz\n",
+      "error_19450501112022.csv.gz\n",
       "error_10001001112022.csv.gz\n",
       "error_23300531102022.csv.gz\n",
       "error_02300701112022.csv.gz\n",
       "error_00150601112022.csv.gz\n",
+      "error_15150501112022.csv.gz\n",
+      "error_20000301112022.csv.gz\n",
       "error_08152401112022.csv.gz\n",
       "error_06450701112022.csv.gz\n",
+      "error_15450301112022.csv.gz\n",
       "error_22300531102022.csv.gz\n",
       "error_22450631102022.csv.gz\n",
       "error_03300501112022.csv.gz\n",
+      "error_17000301112022.csv.gz\n",
       "error_04000501112022.csv.gz\n",
       "error_06000701112022.csv.gz\n",
       "error_02450701112022.csv.gz\n",
+      "error_19300401112022.csv.gz\n",
       "error_01450601112022.csv.gz\n",
       "Fim processsamento de Erros de Memória\n"
      ]
