--- a/notebooks/05-treinamento_classificacao.ipynb
+++ b/notebooks/05-treinamento_classificacao.ipynb
@@ -1388,22 +1388,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/56740050368/anaconda3/lib/python3.9/site-packages/sklearn/model_selection/_split.py:676: UserWarning: The least populated class in y has only 36 members, which is less than n_splits=50.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.9928005421749557"
+       "0.9906613756613757"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "allScores = cross_val_score(clf, X_test, y_test , cv=10)\n",
+    "allScores = cross_val_score(clf, X_test, y_test , cv=50)\n",
     "# cross_val_score retorna array com as 10 validações\n",
     "allScores.mean() # tomamos a média do score"
    ]
