Atualizacao do trabalho

--- a/notebooks/04-preparar_dados.ipynb
+++ b/notebooks/04-preparar_dados.ipynb
@@ -3490,24 +3490,29 @@
    "source": [
     "##  Rotulação\n",
     "\n",
-    "A rotulação consideração uma nova classificação de flavors baseada uma variação de menor de consumo de CPU que será denominada de f, variando de 0 a 1 (f0, f1, f2, f3, f4, f5)\n",
+    "A rotulação consideração uma nova classificação de flavors baseada uma variação de menor de consumo de CPU que será denominada de f, variando de 0 a 10 (f0, f1, f2, f3, f4, f5, f6, f7, f8, f9, f10)\n",
     "\n",
-    "O delta do flavor do limite de memória e consumo de CPU será obtido entre os valores máximo e mínimos de cada métrica dividido em 6 partes.\n",
+    "O delta do flavor do limite de memória e consumo de CPU será obtido entre os valores máximo e mínimos de cada métrica dividido em 11 partes.\n",
     "\n",
-    "(&#916;)Memoria = Max(Pico Memoria) / 6 ~ 600 / 6 = 100 MB\n",
+    "(&#916;)Memoria = Max(Pico Memoria) / 10 ~ 541 / 11 ~ 50 MB\n",
     "\n",
-    "(&#916;)CPU = Max(Mediana da CPU) / 6 ~ 6 / 6 = 1mCPU\n",
+    "(&#916;)CPU = Max(Mediana da CPU) / 10.8 ~ 10 / 11 ~ 1mCPU\n",
     "\n",
     "Desta forma, a classificação de flavors fica:\n",
     "\n",
     "flavor | mCPU | MB\n",
     "--| -- |--\n",
-    "f0|1mCPU|100MB\n",
-    "f1|2mCPU|200MB\n",
-    "f2|3mCPU|300MB\n",
-    "f3|4mCPU|400MB\n",
-    "f4|5mCPU|500MB\n",
-    "f5|6mCPU|600MB\n"
+    "f0|1mCPU|50MB\n",
+    "f1|2mCPU|100MB\n",
+    "f2|3mCPU|150MB\n",
+    "f3|4mCPU|200MB\n",
+    "f4|5mCPU|250MB\n",
+    "f5|6mCPU|300MB\n",
+    "f6|7mCPU|350MB\n",
+    "f7|8mCPU|400MB\n",
+    "f8|9mCPU|450MB\n",
+    "f9|10mCPU|500MB\n",
+    "f10|11mCPU|550MB\n"
    ]
   },
   {
